# 2025-2A-T08-EC11-G03

./: .dockerignore  .env_example  .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: deploy-docusaurus.yml  test-deploy.yml
docker/: entrypoint.sh
docs/: docusaurus.config.js  package-lock.json  package.json
docs/docs/: intro.md
docs/docs/sprint_1/Negócios/: canvas.md
docs/docs/sprint_1/computacao/: arquitetura.md  requisitos.md
docs/docs/sprint_1/impacto_etico/: dados.md  discriminacao.md  justica.md  responsabilidade.md  transparencia.md
docs/docs/sprint_2/: etl.md
docs/docs/sprint_3/api/: animalsController.md  animalsRepository.md  animalsService.md  healthController.md
docs/docs/sprint_4/api/: docker_prima.md
docs/docs/sprint_5/: analise_financeira.md  pipeline.md  testes.md
prisma/: schema.prisma
prisma/migrations/20250925120459_test1/: migration.sql
prisma/migrations/20250925121827_post_gre_db/: migration.sql
src/: .gitignore  Dockerfile.api  README.md  gen_token.py  pyproject.toml
src/app/: __init__.py  main.py
src/app/config/: env.py
src/app/controllers/: animalsController.py  colarController.py  health_controller.py
src/app/repositories/: animalsRepository.py  collarRepository.py
src/app/schemas/: collar_schema.py  schemas.py
src/app/services/: animalsService.py  collarService.py
src/app/utils/: auth.py  client.py  db.py
src/hop/pipeline/: filename.hpl  pipeline.hpl
src/notebooks/: jaguatirica.ipynb  quatis.ipynb
